gccida/g2/xstrerror
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/xstrerror/src/xstrerror.c:510:25: error: use of undeclared identifier 'aUndocumentedEr'
sprintf( xstrerror_buf, aUndocumentedEr, ( unsigned int)errnum); 
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/xstrerror/src/obj/xstrerror.o] Error 1
